# gradeit

./: .gitignore  CLAUDE.md  LICENSE  README.md  dprint.json  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
gradeit/: __init__.py  coordinate.py  core.py  exceptions.py  grade.py  gradeit.py  io.py  plotting.py  sources.py
gradeit/elevation/: __init__.py  tiff_reader.py  usgs_api.py  usgs_local.py
gradeit/elevation/filters/: __init__.py  _savgol.py  savitzky_golay.py
gradeit/filters/: __init__.py  bridge.py  elevation_filter.py  grade_filter.py  savitzky_golay.py
scripts/: make_test_fixture.py
tests/: test_bridge_filter.py  test_elevation.py  test_filtering.py  test_grade.py  test_grade_filter.py  test_gradeit.py  test_imports.py  test_io.py  test_plotting.py
tests/fixtures/n40w105/: USGS_13_n40w105.tif
