[build-system]
requires = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradeit"
version = "0.2.0"
description = "Road Grade Inference Tool (GradeIT) appends elevation and road grade to a sequence of GPS points."
readme = "README.md"
authors = [{ name = "National Laboratory of the Rockies" }]
license = { text = "BSD 3-Clause License Copyright (c) 2020, Alliance for Energy Innovation, LLC" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["gps", "elevation", "road grade"]
dependencies = [
    "numpy",
    "pandas",
    "tifffile",
    "imagecodecs",
]

requires-python = ">=3.10"

[project.optional-dependencies]
api = ["requests"]
dev = ["ruff>=0.14,<1", "mypy>=1,<2", "pytest>=8", "scipy", "types-requests", "pre-commit", "ipykernel", "matplotlib"]

[project.urls]
Homepage = "https://github.com/NatLabRockiesgradeit"

[tool.ruff]
line-length = 100
exclude = ["build/*", "dist/*"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
ignore_missing_imports = true
exclude = ["docs/", "build/", "dist/"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"

[tool.pixi.pypi-dependencies]
gradeit = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "api"], solve-group = "default" }

[tool.pixi.feature.dev.dependencies]
dprint = "*"

[tool.pixi.feature.dev.tasks]
fmt_fix = "ruff format"
lint_fix = "ruff check --fix"
fmt_md = "dprint fmt"
typing = "mypy ."
test = "pytest tests/"
check = { depends-on = ["fmt_fix", "lint_fix", "fmt_md", "typing", "test"] }
